observability/prometheus-aggregation-gateway/gen-output/prometheus-aggregation-gateway.monitoring.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/name: prometheus-aggregation-gateway
    app.kubernetes.io/part-of: prometheus-aggregation-gateway
  name: prometheus-aggregation-gateway
  namespace: monitoring
spec:
  ports:
  - name: http
    port: 80
  selector:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/name: prometheus-aggregation-gateway
    app.kubernetes.io/part-of: prometheus-aggregation-gateway
